compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__field_not_in_all_variants.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_title(person: Person) { person.title }"
---
error: Unknown record field
  ┌─ /src/one/two.gleam:6:42
  │
6 │ pub fn get_title(person: Person) { person.title }
  │                                          ^^^^^^ Did you mean `age`?

The value being accessed has this type:

    Person

It has these fields:

    .age
    .name

Note: The field you are trying to access might not be consistently present or positioned across the custom type's variants, preventing reliable access. Ensure the field exists in the same position and has the same type in all variants to enable direct accessor syntax.
